# cir-model

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml  setup.cfg
.github/workflows/: code-testing.yaml
examples/: benchmark.py  ir_cir_comparison.py
src/cir_model/: __init__.py  cir_model.py
tests/: test_cir_model.py
