[metadata]
name = cir-model
version = attr: cir_model.__version__
description = Centered Isotonic Regression (CIR) is a strictly monotonic, nonparametric regression model
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    GitHub = https://github.com/mathijs02/cir-model
license = BSD 3-Clause License

[options]
packages = find:
install_requires =
    numpy
    scikit-learn >= 0.14
python_requires = >= 3.5
package_dir= =src

[options.packages.find]
where=src